# cse341-new/personal-2/routes/events.js
@@ -9,108 +9,149 @@ routes.use(bodyParser.json());
 
 //Get ALL
 routes.get("/", (req, res) => {
-  try{
-    dbConnection
+  dbConnection
     .getCollectionEvents()
     .find()
-    .toArray()
-    .then((documents) => {
+    .toArray((err, documents) => {
+      if (err) {
+        res.status(400).json({ message: err });
+      }
       res.status(200).json(documents);
       console.log("returned all");
-    }).catch((error) => console.error(error));
-  } catch (err){
-    res.status(500).json(err);
-  }
-  
-    
+    });
 });
 
 //Get ONE
 routes.get("/:eventName", (req, res) => {
-  try{
-    const eventName = req.params.eventName;
+  const eventName = req.params.eventName;
 
-    const results = dbConnection.getCollectionEvents().find({ eventName: eventName });
-
-    console.log(results);
-
-    results.toArray().then((documents) => {
-      res.status(200).json(documents[0]);
-      console.log(`returned ${req.params.eventName}`);
-    }).catch((error) => console.error(error));
-  } catch (err){
-    res.status(500).json(err);
-  }
+  dbConnection
+    .getCollectionEvents()
+    .countDocuments({ eventName: eventName })
+    .then(function (num) {
+      if (num === 0) {
+        res.status(400).json("Must use a valid event name.");
+      } else {
+        dbConnection
+          .getCollectionEvents()
+          .find({ eventName: eventName })
+          .limit(1)
+          .toArray((err, documents) => {
+            if (err) {
+              res.status(400).json({ message: err });
+            }
+            res.status(200).json(documents[0]);
+            console.log(`returned ${req.params.eventName}`);
+          });
+      }
+    });
 });
 
-//Add new 
+//Add new
 routes.post("/", (req, res) => {
-  try{
-    const event = {
-      eventName: req.body.eventName,
-      date: req.body.date,
-      eventHost: req.body.eventHost,
-      startTime: req.body.startTime,
-      endTime: req.body.endTime,
-      location: req.body.location,
-      comments: req.body.comments 
-    };
+  if (
+    !req.body.eventName ||
+    !req.body.date ||
+    !req.body.eventHost ||
+    !req.body.startTime ||
+    !req.body.location
+  ) {
+    res
+      .status(400)
+      .json(
+        "Please fill in all required fields - Required Fields: eventName, date, eventHost, startTime, location"
+      );
+  }else{
 
-    dbConnection
-      .getCollectionEvents()
-      .insertOne(event)
-      .then((result) => {
-        res.status(200).json(result[0]);
-        console.log(result);
-        console.log(event);
-      }).catch((error) => console.error(error));
-  } catch (err){
-    res.status(500).json(err);
-    console.log("oops error!");
+  const event = {
+    eventName: req.body.eventName,
+    date: req.body.date,
+    eventHost: req.body.eventHost,
+    startTime: req.body.startTime,
+    endTime: req.body.endTime,
+    location: req.body.location,
+    comments: req.body.comments,
+  };
+
+  dbConnection
+    .getCollectionEvents()
+    .insertOne(event)
+    .then((result) => {
+      res.status(200).json(`Succesfully added ${req.body.eventName}`);
+    })
+    .catch((error) => console.error(error));
   }
 });
 
 //Update
 routes.put("/:eventName", (req, res) => {
-  try{
-    const eventName = req.params.eventName;
+  const eventName = req.params.eventName;
 
-    const event = {
-      eventName: req.body.eventName,
-      date: req.body.date,
-      eventHost: req.body.eventHost,
-      startTime: req.body.startTime,
-      endTime: req.body.endTime,
-      location: req.body.location,
-      comments: req.body.comments 
-    };
+  if (
+    !req.body.eventName ||
+    !req.body.date ||
+    !req.body.eventHost ||
+    !req.body.startTime ||
+    !req.body.location
+  ) {
+    res
+      .status(400)
+      .json(
+        "Please fill in all required fields - Required Fields: eventName, date, eventHost, startTime, location"
+      );
+  }else{
 
-    const results = dbConnection
-      .getCollectionEvents()
-      .replaceOne({ eventName: eventName }, event);
+  const event = {
+    eventName: req.body.eventName,
+    date: req.body.date,
+    eventHost: req.body.eventHost,
+    startTime: req.body.startTime,
+    endTime: req.body.endTime,
+    location: req.body.location,
+    comments: req.body.comments,
+  };
 
-    results.then((documents) => {
-      res.status(200).json(documents[0]);
-      console.log(`Updated ${req.params.eventName}`);
-    }).catch((error) => console.error(error));
-  } catch (err){
-    res.status(500).json(err);
+  dbConnection
+    .getCollectionEvents()
+    .countDocuments({ eventName: eventName })
+    .then(function (num) {
+      if (num === 0) {
+        res.status(400).json("Must use a valid event name.");
+      } else {
+        dbConnection
+          .getCollectionEvents()
+          .replaceOne({ eventName: eventName }, event)
+          .then((documents) => {
+            res.status(200).json(`Succesfully updated ${req.params.eventName}`);
+            console.log(`Updated ${req.params.eventName}`);
+          })
+          .catch((error) => console.error(error));
+      }
+    });
   }
 });
 
 //Delete
 routes.delete("/:eventName", (req, res) => {
-  try{
-    const eventName = req.params.eventName;
-    const results = dbConnection.getCollectionEvents().deleteOne({ eventName: eventName });
+  const eventName = req.params.eventName;
 
-    results.then((documents) => {
-      res.status(200).json(documents[0]);
-      console.log(`Deleted ${req.params.eventName}`);
-    }).catch((error) => console.error(error));
-  } catch (err){
-    res.status(500).json(err);
-  }
+  dbConnection
+    .getCollectionEvents()
+    .countDocuments({ eventName: eventName })
+    .then(function (num) {
+      if (num === 0) {
+        res.status(400).json("Must use a valid event name.");
+      } else {
+        dbConnection
+          .getCollectionEvents()
+          .deleteOne({ eventName: eventName })
+          .then((documents) => {
+            res.status(200).json(`Succesfully deleted ${req.params.eventName}`);
+            console.log(`Deleted ${req.params.eventName}`);
+          })
+          .catch((error) => console.error(error));
+      }
+    });
 });
 
 module.exports = routes;
